Fix dark mode and added xyflow/react

--- a/src/styles/components/UI/btn.scss
+++ b/src/styles/components/UI/btn.scss
@@ -5,7 +5,7 @@
 	padding: 0.5rem 1rem;
 	border-radius: 0.75rem;
 	font-weight: 600;
-	font-size: 1rem;
+	font-size: clamp(0.75rem, 1.5vw, 1.25rem);
 	line-height: 2;
 	text-transform: uppercase;
 	margin: 0 auto;
