--- a/src/styles/components/UI/loading.scss
+++ b/src/styles/components/UI/loading.scss
@@ -3,10 +3,6 @@
 .loading {
 	text-align: center;
 	font-size: clamp(1rem, 2vw, 1.5rem);
-	color: map-get($color, 'gray-X11');
+	opacity: 0.7;
 	line-height: 2;
-
-	&.no-more {
-		color: map-get($color, 'onyx');
-	}
 }
