--- a/src/styles/components/UI/title.scss
+++ b/src/styles/components/UI/title.scss
@@ -5,5 +5,4 @@
 	font-family: 'Monoton';
 	font-weight: 400;
 	font-size: clamp(1.5rem, 4vw, 4rem);
-	color: map-get($color, 'platinum');
 }
